--- a/RecipeNotebook/src/main/resources/templates/recipes.html
+++ b/RecipeNotebook/src/main/resources/templates/recipes.html
@@ -50,3 +50,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+<!--TODO:キーワード検索画面バー、時間履歴検索画面が必要-->
