--- a/RecipeNotebook/src/main/resources/static/css/recipes.css
+++ b/RecipeNotebook/src/main/resources/static/css/recipes.css
@@ -3,6 +3,12 @@
     object-fit: cover;
 }
 
+.img-fit-contain {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .card {
     transition: transform 0.2s;
 }
