--- a/RecipeNotebook/src/main/resources/templates/new.html
+++ b/RecipeNotebook/src/main/resources/templates/new.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <link href="css/recipes.css" rel="stylesheet">
+  <link href="/css/recipes.css" rel="stylesheet">
 </head>
 
 <body class="bg-light">
@@ -91,7 +91,7 @@
                   </div>
                   <div class="col-auto">
                     <button type="button" class="btn btn-secondary"
-                            onclick="location.href='recipes.html';">
+                            onclick="location.href='/recipes';">
                       レシピ一覧に戻る
                     </button>
                   </div>
@@ -108,7 +108,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="module" src="js/recipes.js"></script>
+<script type="module" src="/js/recipes.js"></script>
 
 </body>
 </html>
