--- a/RecipeNotebook/src/main/resources/templates/recipes.html
+++ b/RecipeNotebook/src/main/resources/templates/recipes.html
@@ -7,7 +7,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <link rel="stylesheet" href="css/recipes.css">
+  <link rel="stylesheet" href="/css/recipes.css">
 </head>
 <body class="bg-light">
 <div class="container mt-4">
@@ -65,7 +65,7 @@
   </form>
 
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <a href="/new.html" class="btn btn-success">新規登録</a>
+    <a href="/recipes/new" class="btn btn-success">新規登録</a>
     <span id="recipeCount" class="text-muted"></span>
   </div>
 
@@ -102,7 +102,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ja.min.js"></script>
-<script src="js/recipes.js"></script>
+<script src="/js/recipes.js"></script>
 
 </body>
 </html>
