--- a/RecipeNotebook/src/main/resources/templates/update.html
+++ b/RecipeNotebook/src/main/resources/templates/update.html
@@ -5,7 +5,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/recipes.css">
+  <link rel="stylesheet" href="/css/recipes.css">
 </head>
 <body>
 <div id="mainContainer"></div>
