--- a/RecipeNotebook/src/main/resources/templates/detail.html
+++ b/RecipeNotebook/src/main/resources/templates/detail.html
@@ -21,16 +21,20 @@
 
           <div class="btn-group-custom text-center">
             <div class="btn-group" role="group" aria-label="Recipe actions">
+              <script>
+                const path = window.location.pathname;
+                const recipeId = path.split("/")[2];
+              </script>
               <button type="button" class="btn btn-outline-primary me-2"
-                      onclick="location.href='/recipes';">
-                <i class="bi bi-arrow-left"></i> レシピ一覧に戻る
-              </button>
-              <button type="button" class="btn btn-outline-secondary me-2"
-                      onclick="location.href='/recipes/update';">
+                      onclick="location.href=`/recipes/${recipeId}/update`;">
                 <i class="bi bi-pencil"></i> レシピを編集する
               </button>
-              <button type="button" class="btn btn-outline-danger">
+              <button type="button" class="btn btn-outline-danger me-2">
                 <i class="bi bi-trash"></i> レシピを削除する
+              </button>
+              <button type="button" class="btn btn-outline-secondary"
+                      onclick="location.href='/recipes';">
+                <i class="bi bi-arrow-left"></i> レシピ一覧に戻る
               </button>
             </div>
           </div>
@@ -62,12 +66,5 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/recipes.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-      const path = window.location.pathname;
-      const recipeId = path.split("/")[2];
-      loadRecipeDetail(recipeId);
-  });
-</script>
 </body>
 </html>
