--- a/RecipeNotebook/src/main/resources/templates/new.html
+++ b/RecipeNotebook/src/main/resources/templates/new.html
@@ -87,10 +87,10 @@
 
                 <div class="row justify-content-center mt-4">
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-primary">確定</button>
+                    <button type="submit" class="btn btn-outline-primary">レシピを登録する</button>
                   </div>
                   <div class="col-auto">
-                    <button type="button" class="btn btn-secondary"
+                    <button type="button" class="btn btn-outline-secondary"
                             onclick="location.href='/recipes';">
                       レシピ一覧に戻る
                     </button>
