画面遷移時のボタンの一部をaddEventListenerに変更し、正しく遷移できるよう修正

--- a/RecipeNotebook/src/main/resources/templates/new.html
+++ b/RecipeNotebook/src/main/resources/templates/new.html
@@ -21,7 +21,7 @@
             <h1 class="display-5 mb-4 text-center">レシピ新規作成フォーム</h1>
 
             <div class="recipe-form justify-content-center mb-4">
-              <form id="newRecipeForm" enctype="multipart/form-data">
+              <form id="recipeForm" enctype="multipart/form-data">
 
                 <!-- レシピ名 -->
                 <div class="mb-3">
