--- a/RecipeNotebook/src/main/resources/templates/detail.html
+++ b/RecipeNotebook/src/main/resources/templates/detail.html
@@ -21,20 +21,15 @@
 
           <div class="btn-group-custom text-center">
             <div class="btn-group" role="group" aria-label="Recipe actions">
-              <script>
-                const path = window.location.pathname;
-                const recipeId = path.split("/")[2];
-              </script>
-              <button type="button" class="btn btn-outline-primary me-2"
-                      onclick="location.href=`/recipes/${recipeId}/update`;">
-                <i class="bi bi-pencil"></i> レシピを編集する
+              <button type="button" id="toEdit" class="btn btn-outline-primary me-2">
+                レシピを編集する
               </button>
               <button type="button" class="btn btn-outline-danger me-2">
-                <i class="bi bi-trash"></i> レシピを削除する
+                レシピを削除する
               </button>
               <button type="button" class="btn btn-outline-secondary"
                       onclick="location.href='/recipes';">
-                <i class="bi bi-arrow-left"></i> レシピ一覧に戻る
+                レシピ一覧に戻る
               </button>
             </div>
           </div>
