--- a/RecipeNotebook/src/main/resources/templates/update.html
+++ b/RecipeNotebook/src/main/resources/templates/update.html
@@ -21,7 +21,7 @@
             <h1 class="display-5 mb-4 text-center">レシピ編集フォーム</h1>
 
             <div class="recipe-form justify-content-center mb-4">
-              <form id="editRecipeForm" enctype="multipart/form-data">
+              <form id="recipeForm" enctype="multipart/form-data">
                 <!-- レシピID（hidden） -->
                 <input type="hidden" id="recipeId" name="recipe.id"/>
 
@@ -92,8 +92,8 @@
                     <button type="submit" class="btn btn-outline-primary">レシピを更新する</button>
                   </div>
                   <div class="col-auto">
-                    <button type="button" class="btn btn-outline-danger">
-                      レシピを削除する
+                    <button type="button" id=toRecipeDetail class="btn btn-outline-secondary">
+                      レシピ詳細に戻る
                     </button>
                   </div>
                   <div class="col-auto">
@@ -112,36 +112,10 @@
   </div>
 </div>
 
-<!-- 削除確認モーダル -->
-<div class="modal fade" id="deleteModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">レシピの削除</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        このレシピを削除してもよろしいですか？
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
-        <button type="button" class="btn btn-danger" id="confirmDelete">削除</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module" src="/js/recipes.js"></script>
-
-<!--TODO:ここで既存のデータを取ってきて入力フォームに入れたい-->
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-  loadRecipeDetail(recipeId);
-  });
-</script>
 
 </body>
 </html>
