編集画面で既存の画像が出るように修正し、画像を更新した場合は既存のファイルが削除されるよう修正

--- a/RecipeNotebook/src/main/resources/static/css/recipes.css
+++ b/RecipeNotebook/src/main/resources/static/css/recipes.css
@@ -131,6 +131,14 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.recipe-small-image {
+    max-width: 50%;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 .recipe-info {
     background-color: white;
     border-radius: 8px;
