ナビゲーションバーを設置してログアウト機能を実装

--- a/RecipeNotebook/src/main/resources/templates/login.html
+++ b/RecipeNotebook/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
     <div class="col-lg-6 col-md-8">
       <div class="card shadow border-0">
         <div class="card-body p-4">
-          <h3 class="display-8 mb-4 text-center">レシピノートアプリ　ログイン画面</h3>
+          <h3 class="display-6 mb-4 text-center">RecipeNotebook</h3>
           <div th:if="${param.error}" class="alert alert-danger">
             ログインに失敗しました。IDまたはパスワードを確認してください。
           </div>
