--- a/RecipeNotebook/src/main/resources/templates/detail.html
+++ b/RecipeNotebook/src/main/resources/templates/detail.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>レシピ詳細</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/css/recipes.css">
 </head>
 <body class="bg-light">
+<header id="header"></header>
 <div class="container py-4">
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10">
