--- a/RecipeNotebook/src/main/resources/templates/update.html
+++ b/RecipeNotebook/src/main/resources/templates/update.html
@@ -6,12 +6,15 @@
   <title>レシピ編集フォーム</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link href="/css/recipes.css" rel="stylesheet">
 </head>
 
 <body class="bg-light">
+<header id="header"></header>
 <div class="container py-4">
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10">
