--- a/RecipeNotebook/src/main/resources/templates/update.html
+++ b/RecipeNotebook/src/main/resources/templates/update.html
@@ -125,7 +125,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="module" src="/js/recipes.js"></script>
+<script src="/js/recipes.js"></script>
 
 </body>
 </html>
