フロントエンド：備考欄をテキストエリアに変更、デザイン修正

--- a/RecipeNotebook/src/main/resources/templates/new.html
+++ b/RecipeNotebook/src/main/resources/templates/new.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,7 +58,7 @@
                 <!-- 備考 -->
                 <div class="mb-3">
                   <label for="remark" class="form-label">備考</label>
-                  <input type="text" class="form-control" id="remark" name="recipe.remark"/>
+                  <textarea class="form-control" id="remark" name="recipe.remark"></textarea>
                 </div>
 
                 <!-- お気に入りチェックボックス -->
