--- a/RecipeNotebook/src/main/resources/templates/update.html
+++ b/RecipeNotebook/src/main/resources/templates/update.html
@@ -67,7 +67,7 @@
                 <!-- 備考 -->
                 <div class="mb-3">
                   <label for="remark" class="form-label">備考</label>
-                  <input type="text" class="form-control" id="remark" name="recipe.remark"/>
+                  <textarea class="form-control" id="remark" name="recipe.remark"></textarea>
                 </div>
 
                 <!-- お気に入りチェックボックス -->
