ゲストログイン機能の追加

--- a/RecipeNotebook/src/main/resources/templates/login.html
+++ b/RecipeNotebook/src/main/resources/templates/login.html
@@ -37,6 +37,11 @@
               <button type="submit" class="btn btn-primary">ログイン</button>
             </div>
           </form>
+          <div class="d-grid mt-4">
+            <button id="guestLogin" class="btn btn-warning">
+              ゲストログインはこちらから
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -45,5 +50,3 @@
 <script src="/js/recipes.js"></script>
 </body>
 </html>
-
-<!--TODO:ゲストログインの追加　⇒　ひとまず、id1のuserと同じにする-->
