「情報元」という文言を「参考にしたレシピ」に修正

--- a/RecipeNotebook/src/main/resources/templates/new.html
+++ b/RecipeNotebook/src/main/resources/templates/new.html
@@ -44,7 +44,7 @@
 
                 <!-- 情報元 -->
                 <div class="mb-3">
-                  <label for="recipeSource" class="form-label">レシピ情報元</label>
+                  <label for="recipeSource" class="form-label">参考にしたレシピ</label>
                   <input type="text" class="form-control" id="recipeSource"
                          name="recipe.recipeSource"/>
                 </div>
